# OpenDistortBot-rs

./: .gitignore  Cargo.toml  README.md  example-bot-config.toml
src/: bot.rs  config.rs  incoming.rs  main.rs
