[package]
name = "opendistortbot-rs"
version = "0.1.0"
authors = ["rupansh-arch <rupanshsekar@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
confy = "0.4"
futures = "0.3"
image = "0.23"
reqwest = "0.10"
telegram-bot = "0.7"
serde = { version = "1.0", features = ["derive"] }
seam-carving = { git = "https://github.com/rupansh/seam-carving" }
tokio = { version = "0.2", features = ["full"] }